testsuite/tests/partial-sigs/should_fail/Forall1Bad.stderr

Forall1Bad.hs:9:13: error: [GHC-83865]
    • Couldn't match expected type ‘Char’ with actual type ‘Bool’
    • In the first argument of ‘fall’, namely ‘True’
      In the expression: fall True
      In an equation for ‘test’: test = fall True
